compliance/opa_gatekeeper/constraint-extern-service.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sExternalData
metadata:
  name: nombre
spec:
  enforcementAction: deny
  match:
	kinds:
	  - apiGroups:
		  - apps
		kinds:
		  - Deployment
	namespaces:
	  - desarrollo
